tests/baselines/reference/isolatedDeclarationOutFile.errors.txt
error TS5101: Option 'outFile' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.


!!! error TS5101: Option 'outFile' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
!!! error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== a.ts (0 errors) ====
    export class A {
        toUpper(msg: string): string {
            return msg.toUpperCase();
        }
    }
    
==== b.ts (0 errors) ====
    import { A } from "./a";
    
    export class B extends A {
        toFixed(n: number): string {
            return n.toFixed(6);
        }
    }
    
    export function makeB(): A {
        return new B();
    }
    